--- a/templates/hmis_dash/barNumericChart.html
+++ b/templates/hmis_dash/barNumericChart.html
@@ -92,8 +92,21 @@
             <a class="dropdown-item" href="#">Total number of Still Birth</a>
         </div>
     </div>
+  
 
     <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'barchart' dist_name fy %}`">Go to Percent</button>
+    <div class="flex-auto h-25 m-1">
+        <ul class="flex-wrap nav nav-tabs d-flex" id="myTab" role="tablist">
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link active" id="monthlyData" data-toggle="tab" role="tab"
+                aria-controls="Monthly" aria-selected="true" data-value="N">Monthly</button>
+            </li>
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link" id="cumulativeData" data-toggle="tab" role="tab"
+                aria-controls="Cumulative" aria-selected="false" data-value="A">Cumulative</button>
+            </li>
+        </ul>
+    </div>
 
     <!-- <div class="dropdown m-1">
     <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
@@ -118,7 +131,7 @@
   </div>
 </div> -->
 
-<div class="row text-center">
+<div class="row text-center" id="monthlySlider">
     <div class="col-12 mb-5">
         
         <input type="text" id="monthSlider" name="somename" data-provide="slider"
@@ -130,7 +143,15 @@
 
     </div>
 </div>
-
+<div class="row text-center" id="quarterlySlider" style="display: none;">
+    <div class="col-12 mb-5">
+        <input type="text" id="quarterSlider" name="name" data-provide="slider"
+            data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11]"
+            data-slider-ticks-labels='["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]'
+            data-slider-min="0" data-slider-max="11" data-slider-step="1" data-slider-value="0"
+            data-slider-tooltip="hide">
+    </div>
+</div>
 <div class="row">
     <div class="col-12" id="chart"></div>
 </div>
@@ -147,6 +168,7 @@
 <script>
 
     var width1;
+    let quarterly = false;
 
     function filterCSV(csv, key, value) {
         var result = [];
@@ -362,15 +384,28 @@
 
             case "Total number of Still Birth": yValue = d => d.tot_still_birth; sortBy = 'tot_still_birth'; break;
 
+        }    
+        if(quarterly == true){
+            var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        }else{
+            var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
         }
-
-            
-        var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
-        filterdata = filterCSV(data, 'month', valMonth);
-        mydata = sortData(filterdata, sortBy);
-        svg.selectAll("*").remove();
-        render(mydata);
+        //var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+        //filterdata = filterCSV(data, 'month', valMonth);
+        //mydata = sortData(filterdata, sortBy);
+        //svg.selectAll("*").remove();
+        //render(mydata);
     }
+
+    
 
     //   $(".ptype a").click(function () {
     //     $(this).parents(".dropdown").find('.btn').html($(this).text() + ' <span class="selectedPtype"></span>');
@@ -429,6 +464,16 @@
         render(mydata);
     });
 
+    let qtickLabels = ["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]
+    
+    $('#quarterSlider').slider().on('slideStop', function (ev) {
+        let val = qtickLabels[ev.value];
+        filterdata = filterCSV(data, 'month', val);
+        mydata = sortData(filterdata, sortBy);
+        svg.selectAll("*").remove();
+        render(mydata);
+    });
+
     let choices = parseURLParameters(window.location.href);
 
     if (choices.length > 0) {
@@ -459,7 +504,39 @@
         });
         return map;
     }
+    
 
+    $(document).ready(function () {
+        $('#cumulativeData').click(function() {
+            quarterly = true;
+            $("div.slider-tick-label-container").css("margin-left", "-4.138rem");
+            $("div.slider-tick-label").css("width", "8.25rem");
+
+            $("#quarterlySlider").show();
+            $("#monthlySlider").hide();
+
+            var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        });
+        $('#monthlyData').click(function() {
+            quarterly = false;
+            $("div.slider-tick-label-container").css("margin-left", "-3.792rem");
+            $("div.slider-tick-label").css("width", "7.583rem");
+            
+            $("#quarterlySlider").hide();
+            $("#monthlySlider").show();
+
+            var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+            
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        });
+    });
 
 </script>
 
