--- a/templates/hmis_dash/barchart.html
+++ b/templates/hmis_dash/barchart.html
@@ -74,22 +74,24 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-light m-1"
+    <div class="p-1">
+        <button type="button" class="btn btn-light"
         onclick="location.href=`{% url 'barnumeric' dist_name fy %}`">Go to Count</button>
-    <!-- <div class="dropdown m-1">
-    <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-      aria-haspopup="true" aria-expanded="false">
-      <span class="selectedPtype"></span>
-    </button>
-    <div class="dropdown-menu ptype" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="#">Urban</a>
-      <a class="dropdown-item" href="#">Rural</a>
-      <a class="dropdown-item" href="#">Tribal</a>
     </div>
-  </div> -->
 
-
-</div>
+    <div class="flex-auto h-25 m-1">
+        <ul class="flex-wrap nav nav-tabs d-flex" id="myTab" role="tablist">
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link active" id="monthlyData" data-toggle="tab" role="tab"
+                aria-controls="Monthly" aria-selected="true" data-value="N">Monthly</button>
+            </li>
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link" id="cumulativeData" data-toggle="tab" role="tab"
+                aria-controls="Cumulative" aria-selected="false" data-value="A">Cumulative</button>
+            </li>
+        </ul>
+    </div>
+    </div>
 
 <!-- <div class="row">
   <div class="col">
@@ -99,12 +101,21 @@
   </div>
 </div> -->
 
-<div class="row text-center">
+<div class="row text-center" id="monthlySlider">
     <div class="col-12 mb-5">
         <input type="text" id="monthSlider" name="somename" data-provide="slider"
             data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11,12]"
             data-slider-ticks-labels='["All", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec",  "Jan", "Feb", "Mar"]'
             data-slider-min="0" data-slider-max="12" data-slider-step="1" data-slider-value="0"
+            data-slider-tooltip="hide">
+    </div>
+</div>
+<div class="row text-center" id="quarterlySlider" style="display: none;">
+    <div class="col-12 mb-5">
+        <input type="text" id="quarterSlider" name="name" data-provide="slider"
+            data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11]"
+            data-slider-ticks-labels='["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]'
+            data-slider-min="0" data-slider-max="11" data-slider-step="1" data-slider-value="0"
             data-slider-tooltip="hide">
     </div>
 </div>
@@ -125,6 +136,7 @@
 <script>
 
     var width1;
+    let quarterly = false;
 
     function filterCSV(csv, key, value) {
         var result = [];
@@ -348,12 +360,19 @@
 
         }
 
-        var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
-
-        filterdata = filterCSV(data, 'month', valMonth);
-        mydata = sortData(filterdata, sortBy);
-        svg.selectAll("*").remove();
-        render(mydata);
+        if(quarterly == true){
+            var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        }else{
+            var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        }
     }
 
     //   $(".ptype a").click(function () {
@@ -402,10 +421,11 @@
             element.preterm_birth_rate = 200;
         if (element.per_pw_outcome > 200)
             element.per_pw_outcome = 200;
+        
 
         data.push(element);
     });
-
+console.log(data_from_django);
     data.forEach(d => {
         d.early_anc_register = +d.early_anc_register;
         d.anc_4_or_more = +d.anc_4_or_more;
@@ -436,6 +456,18 @@
         svg.selectAll("*").remove();
         render(mydata);
     });
+
+    let qtickLabels = ["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]
+    
+    $('#quarterSlider').slider().on('slideStop', function (ev) {
+        let val = qtickLabels[ev.value];
+
+        filterdata = filterCSV(data, 'month', val);
+        mydata = sortData(filterdata, sortBy);
+        svg.selectAll("*").remove();
+        render(mydata);
+    });
+
 
     let choices = parseURLParameters(window.location.href);
 
@@ -468,6 +500,37 @@
         });
         return map;
     }
+    $(document).ready(function () {
+        $('#cumulativeData').click(function() {
+            quarterly = true;
+            $("div.slider-tick-label-container").css("margin-left", "-4.138rem");
+            $("div.slider-tick-label").css("width", "8.25rem");
+
+            $("#quarterlySlider").show();
+            $("#monthlySlider").hide();
+
+            var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        });
+        $('#monthlyData').click(function() {
+            quarterly = false;
+            $("div.slider-tick-label-container").css("margin-left", "-3.792rem");
+            $("div.slider-tick-label").css("width", "7.583rem");
+            
+            $("#quarterlySlider").hide();
+            $("#monthlySlider").show();
+
+            var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+            
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        });
+    });
 
 </script>
 
