--- a/templates/hmis_dash/chldDiseaseLineNumeric.html
+++ b/templates/hmis_dash/chldDiseaseLineNumeric.html
@@ -122,7 +122,18 @@
   </div>
 
   <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'cd_line' dist_name fy %}`">Go to Percent</button>
-
+  <div class="flex-auto h-25 m-1">
+    <ul class="flex-wrap nav nav-tabs d-flex" id="myTab" role="tablist">
+        <li class="flex-wrap nav-item">
+        <button class="flex-wrap rounded nav-link active" id="monthlyData" data-toggle="tab" role="tab"
+            aria-controls="Monthly" aria-selected="true" data-value="N">Monthly</button>
+        </li>
+        <li class="flex-wrap nav-item">
+        <button class="flex-wrap rounded nav-link" id="cumulativeData" data-toggle="tab" role="tab"
+            aria-controls="Cumulative" aria-selected="false" data-value="A">Cumulative</button>
+        </li>
+    </ul>
+</div> 
   <!-- <div class="dropdown m-1">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
@@ -169,6 +180,7 @@
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 
 <script>
+  let quarterly = false;
   let width = 1000,
     height = 550;
 
@@ -590,9 +602,23 @@
   });
 
   function setData(data, section) {
-    var dataFilter = data.map(function (d) { return { financial_year: d.financial_year, month: d.month, areaID:d.area_id, areaN: d.area_name, value: d[section] } })
+    let filterResult;
+      if(quarterly == true){
 
     //debugger
+    //   console.log(data,"data in setData")
+        filterResult = data.filter(u => 
+          u.month_id >= 14);
+      }else{
+        filterResult = data.filter(u => 
+          u.month_id < 14);
+      }   
+
+      var dataFilter = filterResult.map(function (d) { 
+
+      return { financial_year: d.financial_year, month: d.month, areaID:d.area_id, areaN: d.area_name, value: d[section] } })
+
+    
 
     dataFilter.forEach(function (d) {
       d.value = +d.value;
@@ -600,7 +626,7 @@
 
     //debugger
     render(dataFilter);
-    jQuery('h1.page-header').html(section);
+    //jQuery('h1.page-header').html(section);
   }
 
 
@@ -636,6 +662,18 @@
     if (choices.length <= 0)
       $(".category a").first().trigger('click');
 
+  });
+  $(document).ready(function () {
+    $('#cumulativeData').click(function() {
+        quarterly = true;
+        setData(st_data, section);
+
+    });
+    $('#monthlyData').click(function() {
+        quarterly = false;
+        setData(st_data, section);
+
+    });
   });
 </script>
 {% endblock %} ,l
