--- a/templates/hmis_dash/chldImmuBar.html
+++ b/templates/hmis_dash/chldImmuBar.html
@@ -87,7 +87,18 @@
     </div>
 
     <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'ci_barnumeric' dist_name fy %}`">Go to Count</button>
-
+    <div class="flex-auto h-25 m-1">
+        <ul class="flex-wrap nav nav-tabs d-flex" id="myTab" role="tablist">
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link active" id="monthlyData" data-toggle="tab" role="tab"
+                aria-controls="Monthly" aria-selected="true" data-value="N">Monthly</button>
+            </li>
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link" id="cumulativeData" data-toggle="tab" role="tab"
+                aria-controls="Cumulative" aria-selected="false" data-value="A">Cumulative</button>
+            </li>
+        </ul>
+    </div> 
     <!-- <div class="dropdown m-1">
     <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
@@ -111,7 +122,7 @@
   </div>
 </div> -->
 
-<div class="row text-center">
+<div class="row text-center"  id="monthlySlider">
     <div class="col-12 mb-5">
 
         <input type="text" id="monthSlider" name="somename" data-provide="slider"
@@ -123,6 +134,15 @@
     </div>
 </div>
 
+<div class="row text-center" id="quarterlySlider" style="display: none;">
+    <div class="col-12 mb-5">
+        <input type="text" id="quarterSlider" name="name" data-provide="slider"
+            data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11]"
+            data-slider-ticks-labels='["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]'
+            data-slider-min="0" data-slider-max="11" data-slider-step="1" data-slider-value="0"
+            data-slider-tooltip="hide">
+    </div>
+</div>
 <div class="row">
     <div class="col-12" id="chart"></div>
 </div>
@@ -139,7 +159,7 @@
 <script>
 
     var width1;
-
+    let quarterly = false;
     function filterCSV(csv, key, value) {
         var result = [];
         csv.forEach(function (val, idx, arr) {
@@ -345,13 +365,25 @@
 
         }
 
-        var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
-
-        filterdata = filterCSV(data, 'month', valMonth);
-        mydata = sortData(filterdata, sortBy);
-        tableData = tables(filterdata);
-        svg.selectAll("*").remove();
-        render(mydata);
+        if(quarterly == true){
+            var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        }else{
+            var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        }
+        //var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+        //filterdata = filterCSV(data, 'month', valMonth);
+        //mydata = sortData(filterdata, sortBy);
+        //tableData = tables(filterdata);
+        //svg.selectAll("*").remove();
+        //render(mydata);
     }
 
     //   $(".ptype a").click(function () {
@@ -419,6 +451,15 @@
         render(mydata);
     });
 
+    let qtickLabels = ["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]
+    
+    $('#quarterSlider').slider().on('slideStop', function (ev) {
+        let val = qtickLabels[ev.value];
+        filterdata = filterCSV(data, 'month', val);
+        mydata = sortData(filterdata, sortBy);
+        svg.selectAll("*").remove();
+        render(mydata);
+    });
     let choices = parseURLParameters(window.location.href);
 
     console.log(choices, "choices")
@@ -453,7 +494,37 @@
         return map;
     }
 
+    $(document).ready(function () {
+        $('#cumulativeData').click(function() {
+            quarterly = true;
+            $("div.slider-tick-label-container").css("margin-left", "-4.138rem");
+            $("div.slider-tick-label").css("width", "8.25rem");
 
+            $("#quarterlySlider").show();
+            $("#monthlySlider").hide();
+
+            var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        });
+        $('#monthlyData').click(function() {
+            quarterly = false;
+            $("div.slider-tick-label-container").css("margin-left", "-3.792rem");
+            $("div.slider-tick-label").css("width", "7.583rem");
+            
+            $("#quarterlySlider").hide();
+            $("#monthlySlider").show();
+
+            var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+            
+            filterdata = filterCSV(data, 'month', valMonth);
+            mydata = sortData(filterdata, sortBy);
+            svg.selectAll("*").remove();
+            render(mydata);
+        });
+    });
 </script>
 
 {% endblock %}
