--- a/templates/hmis_dash/compBarPW.html
+++ b/templates/hmis_dash/compBarPW.html
@@ -98,6 +98,8 @@
 
     </div>
     <button class='btn btn-light toggle m-1'>Compare</button>
+    <button type="button" class="btn btn-success m-1" id="cumulativeData">Cumulative</button>        
+    <button type="button" class="btn btn-primary m-1 hidden" id="monthlyData" style="display: none;">Monthly</button>   
   </div>
 
 
@@ -142,7 +144,7 @@
     Please click "<b>Compare</b>" button if you want to see Indicators Comparison
   </div>
 
-<div class="row text-center">
+<div class="row text-center" id="monthlySlider">
     <div class="col-12 mb-5">
         <input type="text" id="monthSlider" name="somename" data-provide="slider"
             data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11,12]"
@@ -150,6 +152,15 @@
             data-slider-min="0" data-slider-max="12" data-slider-step="1" data-slider-value="0"
             data-slider-tooltip="hide">
     </div>
+</div>
+<div class="row text-center" id="quarterlySlider" style="display: none;">
+  <div class="col-12 mb-5">
+      <input type="text" id="quarterSlider" name="name" data-provide="slider"
+          data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11]"
+          data-slider-ticks-labels='["Apr", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]'
+          data-slider-min="0" data-slider-max="11" data-slider-step="1" data-slider-value="0"
+          data-slider-tooltip="hide">
+  </div>
 </div>
 
 <div id='sw' class="spinner-wrapper">
@@ -174,7 +185,7 @@
   const width = 700;
   const height = 1500;
 
-
+  let quarterly = false;
   const tansitionDuration = 500;
 
   const bar1 = d3.select('#b1').append("svg").attr('id', 'svg1').attr('width', 700).attr('height', 1600).call(responsivefy);
@@ -596,7 +607,22 @@
     drawLeft(monthDataL);
     drawRight(monthDataR);
   });
+  let qtickLabels = ["Apr", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]
 
+$('#quarterSlider').slider().on('slideStop', function (ev) {
+  let val;
+  if(qtickLabels[ev.value] == "Apr"){
+      val = "Upto Apr";
+  }
+  else
+      val = qtickLabels[ev.value];
+
+  filterdata = filterCSV(data, 'month', val);
+  monthDataL = sortData(filterdata, sortByL);
+  monthDataR = sortData(filterdata, sortByR);
+  drawLeft(monthDataL);
+  drawRight(monthDataR);
+});
 
   $(".category a").click(function () {
 
@@ -644,10 +670,20 @@ case "Preterm Birth Rate": xValue = d => d.preterm_birth_rate; sortByL = 'preter
 case "Pregnancy outcomes as a % of ANC registration": xValue = d => d.per_pw_outcome; sortByL = 'per_pw_outcome'; break;
     }
 
-    var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
-    filterdata = filterCSV(data, 'month', valMonth);
-    monthDataL = sortData(filterdata, sortByL);
-    drawLeft(monthDataL);
+    if(quarterly == true){
+      var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+      if(valMonth == "Apr"){
+          valMonth = "Upto Apr";
+      }
+      filterdata = filterCSV(data, 'month', valMonth);
+      monthDataL = sortData(filterdata, sortByL);
+      drawLeft(monthDataL);
+    }else{
+      var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+      filterdata = filterCSV(data, 'month', valMonth);
+      monthDataL = sortData(filterdata, sortByL);
+      drawLeft(monthDataL);
+    }
   }
 
 
@@ -690,10 +726,20 @@ case "Pregnancy outcomes as a % of ANC registration": xValue = d => d.per_pw_out
 
     }
 
-    var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
-    filterdata = filterCSV(data, 'month', valMonth);
-    monthDataR = sortData(filterdata, sortByR);
-    drawRight(monthDataR);
+    if(quarterly == true){
+      var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+      if(valMonth == "Apr"){
+          valMonth = "Upto Apr";
+      }
+      filterdata = filterCSV(data, 'month', valMonth);
+      monthDataR = sortData(filterdata, sortByR);
+      drawRight(monthDataR);
+    }else{
+      var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+      filterdata = filterCSV(data, 'month', valMonth);
+      monthDataR = sortData(filterdata, sortByR);
+      drawRight(monthDataR);
+    }
 
   });
 
@@ -766,7 +812,44 @@ case "Pregnancy outcomes as a % of ANC registration": xValue = d => d.per_pw_out
     $(".category a").first().trigger('click');
 
   });
+  $(document).ready(function () {
+    $('#cumulativeData').click(function() {
+        quarterly = true;
+        $("div.slider-tick-label-container").css("margin-left", "-4.138rem");
+        $("div.slider-tick-label").css("width", "8.25rem");
 
+        $("#quarterlySlider").show();
+        $("#monthlySlider").hide();
+        $("#cumulativeData").hide();
+        $("#monthlyData").show();
+
+        var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+        if(valMonth == "Apr"){
+            valMonth = "Upto Apr";
+        }
+        filterdata = filterCSV(data, 'month', valMonth);
+        mydata = sortData(filterdata, sortBy);
+        svg.selectAll("*").remove();
+        render(mydata);
+    });
+    $('#monthlyData').click(function() {
+        quarterly = false;
+        $("div.slider-tick-label-container").css("margin-left", "-3.792rem");
+        $("div.slider-tick-label").css("width", "7.583rem");
+
+        $("#quarterlySlider").hide();
+        $("#monthlySlider").show();
+        $("#cumulativeData").show();
+        $("#monthlyData").hide();
+
+        var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+
+        filterdata = filterCSV(data, 'month', valMonth);
+        mydata = sortData(filterdata, sortBy);
+        svg.selectAll("*").remove();
+        render(mydata);
+    });
+  });
 </script>
 
 {% endblock %}
