--- a/templates/hmis_dash/fy_lineNum.html
+++ b/templates/hmis_dash/fy_lineNum.html
@@ -130,9 +130,20 @@
             {% endfor %}
         </select>
     </div>
-
-  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'fy_line' dist_name fy %}`">Go to Percent</button>
-
+ 
+    <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'fy_line' dist_name fy %}`">Go to Percent</button>
+    <div class="flex-auto h-25 m-1">
+        <ul class="flex-wrap nav nav-tabs d-flex" id="myTab" role="tablist">
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link active" id="monthlyData" data-toggle="tab" role="tab"
+                aria-controls="Monthly" aria-selected="true" data-value="N">Monthly</button>
+            </li>
+            <li class="flex-wrap nav-item">
+            <button class="flex-wrap rounded nav-link" id="cumulativeData" data-toggle="tab" role="tab"
+                aria-controls="Cumulative" aria-selected="false" data-value="A">Cumulative</button>
+            </li>
+        </ul>
+    </div>
 
     <!-- <div class="dropdown m-1">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
@@ -182,7 +193,7 @@
 <script>
     let width = 1000,
         height = 550;
-
+        let quarterly = false;
     let sel_fy = '{{ fy }}';
     let sel_st = '{{ dist_name }}';
 
@@ -633,9 +644,18 @@
         legendbox.selectAll("*").remove();
         setData(fyData, section);
     });
-
     function setData(data, section) {
-        var dataFilter = data.map(function (d) { return { financial_year: d.financial_year, month: d.month, areaID:d.area_id, areaN: d.area_name, value: d[section] } })
+        let filterResult;
+          if(quarterly == true){
+    
+            filterResult = data.filter(u => 
+              u.month_id >= 14);
+          }else{
+            filterResult = data.filter(u => 
+              u.month_id < 14);
+          }   
+        var dataFilter = data.map(function (d) { 
+            return { financial_year: d.financial_year, month: d.month, areaID:d.area_id, areaN: d.area_name, value: d[section] } })
 
         //debugger
 
@@ -679,6 +699,16 @@
         if (choices.length <= 0)
             $(".category a").first().trigger('click');
 
+    });
+    $(document).ready(function () {
+        $('#cumulativeData').click(function() {
+            quarterly = true;
+            setData(fyData, section);
+        });
+        $('#monthlyData').click(function() {
+            quarterly = false;
+            setData(fyData, section);
+        });
     });
 </script>
 {% endblock %}
