--- a/templates/hmis_dash/pieChldDisease.html
+++ b/templates/hmis_dash/pieChldDisease.html
@@ -74,7 +74,18 @@
         <a class="dropdown-item" href="#">Childhood Diseases-Severe Acute Malnutrition(SAM)</a>
     </div>
   </div>
-
+  <div class="flex-auto h-25 m-1">
+    <ul class="flex-wrap nav nav-tabs d-flex" id="myTab" role="tablist">
+        <li class="flex-wrap nav-item">
+        <button class="flex-wrap rounded nav-link active" id="monthlyData" data-toggle="tab" role="tab"
+            aria-controls="Monthly" aria-selected="true" data-value="N">Monthly</button>
+        </li>
+        <li class="flex-wrap nav-item">
+        <button class="flex-wrap rounded nav-link" id="cumulativeData" data-toggle="tab" role="tab"
+            aria-controls="Cumulative" aria-selected="false" data-value="A">Cumulative</button>
+        </li>
+    </ul>
+  </div> 
   <!-- <div class="dropdown m-1">
     <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
@@ -89,13 +100,23 @@
 
 </div>
 
-<div class="row text-center">
+<div class="row text-center" id="monthlySlider">
   <div class="col-12 mb-5">
       <input type="text" id="monthSlider" name="somename" data-provide="slider"
-            data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11,12]"
-            data-slider-ticks-labels='["All", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec",  "Jan", "Feb", "Mar"]'
-            data-slider-min="0" data-slider-max="12" data-slider-step="1" data-slider-value="0"
-            data-slider-tooltip="hide">
+          data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11,12]"
+          data-slider-ticks-labels='["All", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec",  "Jan", "Feb", "Mar"]'
+          data-slider-min="0" data-slider-max="12" data-slider-step="1" data-slider-value="0"
+          data-slider-tooltip="hide">
+  </div>
+</div>
+
+<div class="row text-center" id="quarterlySlider" style="display: none;">
+  <div class="col-12 mb-5">
+      <input type="text" id="quarterSlider" name="name" data-provide="slider"
+          data-slider-ticks="[0, 1, 2, 3, 4, 5,6,7,8,9,10,11]"
+          data-slider-ticks-labels='["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]'
+          data-slider-min="0" data-slider-max="11" data-slider-step="1" data-slider-value="0"
+          data-slider-tooltip="hide">
   </div>
 </div>
 
@@ -116,7 +137,7 @@
 {% block feature_js %}
 
 <script>
-
+  let quarterly = false;
   const svg = d3.select('#chart').
     append('svg').
     attr('width', 1100).
@@ -401,15 +422,30 @@
 
     function displayPie(valCategory)
     {
-        var displayVal = valCategory.substring(0, valCategory.length);
-          document.getElementById('paraText').innerHTML = displayVal + " Contribution: ";
-          if( dtInt > 440 ){
-            document.getElementById('bartitleCategory').innerHTML = displayVal + " : District wise Contribution " + "(" + fy + ")";
-          }
-          else
-            document.getElementById('bartitleCategory').innerHTML = displayVal + " : State wise Contribution " + "(" + fy + ")";
-          setArcInitial(valCategory);
-          makeviz(arcInitial);
+      var displayVal = valCategory.substring(0, valCategory.length);
+      document.getElementById('paraText').innerHTML = displayVal + " Contribution: ";
+      if( dtInt > 440 ){
+        document.getElementById('bartitleCategory').innerHTML = displayVal + " : District wise Contribution " + "(" + fy + ")";
+      }
+      else
+        document.getElementById('bartitleCategory').innerHTML = displayVal + " : State wise Contribution " + "(" + fy + ")";
+      setArcInitial(valCategory);
+      makeviz(arcInitial);
+
+      if(quarterly == true){
+        var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+        if(valMonth == "Apr"){
+            valMonth = "Upto Apr";
+        }
+        filterdata = filterCSV(data, 'month', valMonth);
+        svg.selectAll("*").remove();
+        render(filterdata);
+      }else{
+        var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+        filterdata = filterCSV(data, 'month', valMonth);
+        svg.selectAll("*").remove();
+        render(filterdata);
+      } 
     }
 
     $(".category a").click(function () {
@@ -496,7 +532,7 @@
   });
 
 
-let tickLabels = ["All", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec",  "Jan", "Feb", "Mar"]
+  let tickLabels = ["All", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec",  "Jan", "Feb", "Mar"]
 
 $('#monthSlider').slider().on('slideStop', function (ev) {
     var val = tickLabels[ev.value];
@@ -506,10 +542,48 @@ $('#monthSlider').slider().on('slideStop', function (ev) {
     render(mydata);
 });
 
+let qtickLabels = ["April", "Upto May", "Upto Jun", "Upto Jul", "Upto Aug", "Upto Sep", "Upto Oct", "Upto Nov", "Upto Dec", "Upto Jan", "Upto Feb", "Upto Mar"]
+    
+  $('#quarterSlider').slider().on('slideStop', function (ev) {
+    let val = qtickLabels[ev.value];
+    filterdata = filterCSV(data, 'month', val);
+    svg.selectAll("*").remove();
+    render(filterdata);
+  });
 
   monthSelect = tickLabels[$('#monthSlider').slider('getValue')]
   augData = filterCSV(data, 'month', monthSelect);
   render(augData);
+
+  $(document).ready(function () {
+    $('#cumulativeData').click(function() {
+        quarterly = true;
+        $("div.slider-tick-label-container").css("margin-left", "-4.138rem");
+        $("div.slider-tick-label").css("width", "8.25rem");
+
+        $("#quarterlySlider").show();
+        $("#monthlySlider").hide();
+
+        var valMonth = qtickLabels[$('#quarterSlider').slider('getValue')];
+        filterdata = filterCSV(data, 'month', valMonth);
+        svg.selectAll("*").remove();
+        render(filterdata);
+    });
+    $('#monthlyData').click(function() {
+        quarterly = false;
+        $("div.slider-tick-label-container").css("margin-left", "-3.792rem");
+        $("div.slider-tick-label").css("width", "7.583rem");
+        
+        $("#quarterlySlider").hide();
+        $("#monthlySlider").show();
+
+        var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
+        
+        filterdata = filterCSV(data, 'month', valMonth);
+        svg.selectAll("*").remove();
+        render(filterdata);
+    });
+  });
 </script>
 
 {% endblock %}
